--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "webpack-cli": "^3.3.11"
   },
   "dependencies": {
+    "bcrypt": "^4.0.1",
     "express": "^4.17.1",
     "mongoose": "^5.9.3",
     "react": "^16.13.0",
