--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "babel-loader": "^8.0.6",
     "live-server": "^1.2.1",
     "nodemon": "^2.0.2",
+    "react-redux": "^7.2.0",
     "webpack": "^4.42.0",
     "webpack-cli": "^3.3.11"
   },
@@ -27,6 +28,7 @@
     "express": "^4.17.1",
     "mongoose": "^5.9.3",
     "react": "^16.13.0",
-    "react-dom": "^16.13.0"
+    "react-dom": "^16.13.0",
+    "redux": "^4.0.5"
   }
 }
