--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "fe-start": "live-server --port=8888 ./client/dist",
+    "fe-start": "webpack-dev-server",
     "react-dev": "webpack -d --watch",
     "be-start": "nodemon ./api/server.js"
   },
@@ -18,17 +18,19 @@
     "@babel/preset-react": "^7.8.3",
     "babel-loader": "^8.0.6",
     "live-server": "^1.2.1",
-    "nodemon": "^2.0.2",
     "react-redux": "^7.2.0",
     "webpack": "^4.42.0",
-    "webpack-cli": "^3.3.11"
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "bcrypt": "^4.0.1",
     "express": "^4.17.1",
     "mongoose": "^5.9.3",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
+    "react-router-dom": "^5.1.2",
     "redux": "^4.0.5"
   }
 }
