--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
     "redux-devtools-extension": "^2.13.8",
-    "shortid": "^2.2.15"
+    "shortid": "^2.2.15",
+    "xdate": "^0.8.2"
   }
 }
