--- a/package.json
+++ b/package.json
@@ -1,22 +1,43 @@
 {
-  "name": "api",
+  "name": "client",
   "version": "1.0.0",
   "description": "",
-  "main": "db.js",
+  "main": "api.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "webpack --mode production",
+    "fe-start": "webpack-dev-server",
+    "react-dev": "webpack -d --watch",
     "start": "node server.js",
     "be-start": "nodemon ./server.js"
   },
+  "keywords": [],
   "author": "",
   "license": "ISC",
+  "devDependencies": {
+    "@babel/core": "^7.8.7",
+    "@babel/preset-env": "^7.8.7",
+    "@babel/preset-react": "^7.8.3",
+    "babel-loader": "^8.0.6",
+    "css-loader": "^3.4.2",
+    "nodemon": "^2.0.2",
+    "react-redux": "^7.2.0",
+    "style-loader": "^1.1.3",
+    "webpack": "^4.42.0",
+    "webpack-cli": "^3.3.11",
+    "webpack-dev-server": "^3.10.3"
+  },
   "dependencies": {
+    "axios": "^0.19.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "mongoose": "^5.9.4",
-    "shortid": "^2.2.15"
-  },
-  "devDependencies": {
-    "nodemon": "^2.0.2"
+    "react": "^16.13.0",
+    "react-dom": "^16.13.0",
+    "react-router-dom": "^5.1.2",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
+    "shortid": "^2.2.15",
+    "xdate": "^0.8.2"
   }
 }
