--- a/package.json
+++ b/package.json
@@ -27,10 +27,15 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "antd": "^4.0.2",
+    "aws-amplify": "^2.2.6",
+    "aws-amplify-react": "^3.1.7",
     "axios": "^0.19.2",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "jwt-decode": "^2.2.0",
     "mongoose": "^5.9.4",
+    "password-validator": "^5.0.3",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
@@ -38,6 +43,7 @@
     "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "shortid": "^2.2.15",
+    "styled-components": "^5.0.1",
     "xdate": "^0.8.2"
   }
 }
