--- a/package.json
+++ b/package.json
@@ -4,11 +4,10 @@
   "description": "",
   "main": "api.js",
   "scripts": {
-    "build": "webpack --mode production",
-    "fe-start": "webpack-dev-server",
-    "react-dev": "webpack -d --watch",
-    "start": "node server.js",
-    "be-start": "nodemon ./server.js"
+    "fe-dev": "webpack-dev-server --env.ENVIRONMENT=development",
+    "build": "webpack --env.ENVIRONMET=production --mode production",
+    "be-dev": "NODE_ENV=development nodemon ./server.js",
+    "start": "NODE_ENV=production node server.js"
   },
   "keywords": [],
   "author": "",
@@ -32,6 +31,8 @@
     "aws-amplify-react": "^3.1.7",
     "axios": "^0.19.2",
     "cors": "^2.8.5",
+    "custom-env": "^2.0.1",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "jwt-decode": "^2.2.0",
     "mongoose": "^5.9.4",
