--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "aws-amplify": "^2.2.6",
     "aws-amplify-react": "^3.1.7",
     "axios": "^0.19.2",
+    "cognito-express": "^2.0.16",
     "cors": "^2.8.5",
     "custom-env": "^2.0.1",
     "dotenv": "^8.2.0",
