--- a/package.json
+++ b/package.json
@@ -34,7 +34,9 @@
     "cors": "^2.8.5",
     "custom-env": "^2.0.1",
     "dotenv": "^8.2.0",
+    "dotenv-expand": "^5.1.0",
     "express": "^4.17.1",
+    "fs": "0.0.1-security",
     "jwt-decode": "^2.2.0",
     "mongoose": "^5.9.4",
     "password-validator": "^5.0.3",
