--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "jwt-decode": "^2.2.0",
+    "lodash": "^4.17.15",
     "mongoose": "^5.9.4",
     "password-validator": "^5.0.3",
     "react": "^16.13.0",
