--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "mongoose": "^5.9.4",
     "password-validator": "^5.0.3",
     "react": "^16.13.0",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.13.0",
     "react-router-dom": "^5.1.2",
     "redux": "^4.0.5",
