--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "webpack-dev-server": "^3.10.3"
   },
   "dependencies": {
+    "@aws-amplify/ui-react": "^0.2.5",
     "antd": "^4.0.2",
     "aws-amplify": "^2.2.6",
     "aws-amplify-react": "^3.1.7",
