update ENV vars

--- a/.env_sample
+++ b/.env_sample
@@ -1,23 +1,18 @@
 APP_ENV=development
 
 
-PORT=8080
-SERVER_URL=http://localhost
-THIS_API=$SERVER_URL:$PORT
+PORT=
+SERVER_URL=
+API=$SERVER_URL:$PORT/api
 
-CLIENT_DEV_PORT=9000
-CLIENT_URL=http://localhost
-CLIENT=$CLIENT_URL:$CLIENT_DEV_PORT
+CLIENT_PORT=
+CLIENT_URL=
+CLIENT=$CLIENT_URL:$CLIENT_PORT
 
 
 COGNITO_USER_POOL_ID=
-AMPLIFY_LOGIN_REDIRECT=http://localhost:8080/login
 
 
-DB_HOST=
-DB_PORT=
-DB_USER=
-DB_PW=
-DB_NAME=
+DB_URL=
 
 APP_NAME='Employee Roster'
